<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.UpdateJobActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="912dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exitID"
                style="@style/Widget.Material3.Button.TextButton.Dialog"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:background="@color/white"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                app:icon="@android:drawable/ic_menu_revert"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="25dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/update_job"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#020202"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="786dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/selectJobButtonID"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:fontFamily="sans-serif"
                            android:text="@string/select_job"
                            android:textSize="16sp" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/title"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/titleID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/edittext_rounded_border"
                        android:cursorVisible="true"
                        android:hint="@string/title"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/company"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/companyID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/edittext_rounded_border"
                        android:cursorVisible="true"
                        android:hint="@string/company"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/location"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/cityID"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/edittext_rounded_border"
                            android:cursorVisible="true"
                            android:hint="@string/city"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <EditText
                            android:id="@+id/stateID"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/edittext_rounded_border"
                            android:cursorVisible="true"
                            android:hint="@string/state"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/livingcost"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/costOfLivingID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/edittext_rounded_border"
                        android:cursorVisible="true"
                        android:hint="@string/enter_index_number"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/yearlySalary"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/yearlySalaryID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/edittext_rounded_border"
                        android:cursorVisible="true"
                        android:hint="@string/number_decimal"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/yearlyBonus"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/yearlyBonusID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/edittext_rounded_border"
                        android:cursorVisible="true"
                        android:hint="@string/number_decimal"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/trainingFund"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/trainingFundID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/edittext_rounded_border"
                        android:cursorVisible="true"
                        android:hint="@string/number_decimal"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/leaveTime"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/leaveTimeID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/edittext_rounded_border"
                        android:cursorVisible="true"
                        android:hint="@string/number_decimal"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/telework"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/teleworkDaysID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/edittext_rounded_border"
                        android:cursorVisible="true"
                        android:hint="@string/integer"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/updateJobButtonID"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/update" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/deleteButtonID"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/delete" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="250dp" />

                </LinearLayout>

                <Space
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>